--- a/Z1 vb-conn.tex
+++ b/Z1 vb-conn.tex
@@ -1,4 +1,4 @@
-We provide a brief introduction to connections on vector bundles.
+We provide a brief introduction to connections on vector bundles. See \cite{huybrechts} for more details.
 \subsection{Parallel transport}
 One way to think about a connection is to consider parallel transport. You want to 
 be able to differentiate sections of a vector bundle along paths. When we are dealing with functions,
@@ -49,9 +49,7 @@ section of $E$, i.e. $\nabla:\Gamma(E)\to \Gamma(\Hom(TM,E))$.
         $a\in\cA^1(\End E)$.
     \end{itemize}
 \end{theorem}
-\begin{proof}
-    See \cite{huybrechts}.
-\end{proof}
+
 The idea of a connection generalizes the exterior differential to sections of general vector bundles. 
 However, a connection need not satisfy $\nabla^2 = 0$ in general. The obstruction for a connection
 define a differential is measured by its curvature. We explain this now.
