--- a/refs.bib
+++ b/refs.bib
@@ -32,6 +32,46 @@ publisher = {Springer},
 year = {2001}
 }
 
+@book{eisenbud-harris,
+author = {Eisenbud, David and Harris, Joe},
+title = {3264 and All That: A Second Course in Algebraic Geometry},
+publisher = {Cambridge University Press},
+year = {2016}
+}
+@article{hhh,
+  author    = {Harada, Megumi and Henriques, Andre and Holm, Tara S.},
+  title     = {Computation of generalized equivariant cohomologies of Kac-Moody flag varieties},
+  journal   = {arXiv Mathematics e-prints},
+  eprint    = {arXiv:math/0409305},
+  year      = {2004},
+  url       = {https://arxiv.org/abs/math/0409305},
+}
+@article{gkm,
+  author    = {Goresky, Mark and Kottwitz, Robert and MacPherson, Robert},
+  title     = {Equivariant cohomology, Koszul duality, and the localization theorem},
+  journal   = {Inventiones Mathematicae},
+  volume    = {131},
+  number    = {1},
+  pages     = {25--83},
+  year      = {1997},
+  publisher = {Springer},
+  doi       = {10.1007/s002220050197},
+  url       = {https://doi.org/10.1007/s002220050197},
+}
+
+@article{bb,
+  author       = {Białynicki-Birula, A.},
+  title        = {Some Theorems on Actions of Algebraic Groups},
+  journal      = {Annals of Mathematics},
+  volume       = {98},
+  number       = {3},
+  year         = {1973},
+  pages        = {480--497},
+  publisher    = {Annals of Mathematics},
+  doi          = {10.2307/1970915},
+  url          = {https://www.jstor.org/stable/1970915}
+}
+
 @book{fulton-anderson,
 author = {Fulton, William and Anderson, David},
 title = {Equivariant Cohomology in Algebraic Geometry},
