--- a/2 constructing.tex
+++ b/2 constructing.tex
@@ -109,56 +109,36 @@ This linearized action of $\mf g$ is given by the expression
         E &\mapsto \frac{\partial}{\partial z} \\
         H &\mapsto 2z\frac{\partial}{\partial z} \\
         F &\mapsto -z^2\frac{\partial}{\partial z}
-    \end{align*} which is the standard action of $\mf{sl}(2,\C)$ on $T\P^1$. This map in fact 
-    extends to an isomorphism between the enveloping algebra $U(\mf{sl}(2,\C))$ and 
-    the algebra of differential operators on $\cD_{\text{hol}}(\P^1)$. This is a 
-    shadow of the Beilinson-Bernstein localization theorem (cf. \cite{htt}).
+    \end{align*} which gives coordinates for the action of $\mf{sl}(2,\C)$ on $\Gamma(T\P^1)$.
+    Recall that $T\P^1 \cong \cO(2)$ and $\dim \Gamma(T\P^1) = 3$. In particular, $\mf{sl}(2,\C)$
+    acts on $\Gamma(T\P^1)$ by the standard representation. In general, this isomorphism can be thought of as 
+    happening in degree $1$. This map extends to a graded isomorphism between the enveloping algebra $U(\mf{sl}(2,\C))$ and 
+    the algebra of differential operators $\cD_{\text{hol}}(\P^1)$ on $\P^1$. This is a 
+    shadow of the Beilinson-Bernstein localization theorem (see \cite{htt}).
 \end{example}
 
-We say that the
-action of $G$ is \emph{weakly Hamiltonian} 
-if for every $\zeta\in\mf g$ the corresponding vector field $X_\zeta$ is Hamiltonian,
+Let $M$ be a symplectic manifold. We say that the action of $T$ on $M$ is \emph{weakly Hamiltonian} if for every $\zeta\in\mf t$ the corresponding vector field $X_\zeta$ is Hamiltonian,
 i.e. $\iota_{X_\zeta}\omega = dH_\zeta$ for some smooth function $H_\zeta$. The $H_\zeta$
 is determined only up to a constant, so choose the map $\mf g \to C^\infty(M)$ given by 
 $\zeta \mapsto H_\zeta$ to be linear. If the map can be chosen to be equivariant with respect
-to the adjoint action of $G$ on $\mf g$, then the action of $G$ is called \emph{Hamiltonian}.
-In this case, there is a map $\mu : M \to \mf g^*$ called the \emph{moment map} defined by
+to the adjoint action of $T$ on $\mf t$, then the action of $T$ is called \emph{Hamiltonian}.
+In this case, there is a map $\mu : M \to \mf t^*$ called the \emph{moment map} defined by
 \begin{align*}
     H_\zeta(m) := \langle \mu(m), \zeta \rangle
 \end{align*}
-If the action of $G$ is Hamiltonian, then the moment map is $G$-equivariant and unique up 
-to the addition of a constant. When $G = T$ is a torus, the adjoint action 
-is trivial and the moment map $\mu : M \to \mf t^*$
-is $T$-invariant.
-
+If the action of $T$ is Hamiltonian, then the moment map is $T$-equivariant and unique up 
+to the addition of a constant. In particular since $T$ is abelian, the adjoint action 
+is trivial and the moment map $\mu : M \to \mf t^*$ is $T$-invariant. We are now prepared to state a foundational result in the classification of toric symplectic manifolds. For a 
+complete reference, see \cite{mcduff-salamon}
 \begin{theorem}\label{thm:ags}
     [Atiyah-Guillemin-Sternberg Convexity Theorem] Let $M$ be a compact connected symplectic manifold with a
     Hamiltonian $T$-action. Then the image of the moment map is a convex polytope 
     in $\mf t^*$ whose vertices are the image of the fixed points of the $T$-action.
 \end{theorem}
-\begin{proof}
-    See \cite{mcduff-salamon}.
-\end{proof}
-
 We say $M$ is a \emph{toric symplectic manifold} in the sense of Theorem \ref{thm:delzant}
 if $(M,\omega)$ is a compact connected symplectic manifold
 with a effective (meaning no element of $T$ acts trivially) Hamiltonian $T$-action.
 
-\begin{proposition}
-    Let $M\subset \C\P^n$ be a smooth projective toric variety embedded by a line bundle.
-    Then $M$ is equivariantly symplectomorphic to a toric symplectic manifold.
-\end{proposition}
-\begin{proof}
-$\C\P^n$ carries a natural symplectic form $\omega$ 
-called the Fubini-Study form. Any smooth projective toric variety $M$ embedded
-in projective space carries a symplectic form $\omega$ induced by pulling 
-back the Fubini-Study form. Moreover, the action of $T$ on $M$
- is Hamiltonian with respect to $\omega$.
-\end{proof}
-
-Conversely, given a toric symplectic manifold $(M,\omega)$, we can associate a 
-smooth projective toric variety to the moment polytope $\mu(M)$ which will be
-equivariantly symplectomorphic to $M$.
 
 \subsection{Symplectic reduction}
 We describe how to construct $M$ as the symplectic reduction of affine space $\C^N$ for 
@@ -212,43 +192,44 @@ Symplectic reduction realizes one direction of Delzant's correspondence.
     The reduced space $X_1(P) := Z/K$ is a toric symplectic manifold with moment map image $P$.
 \end{proposition}
 
-\subsection{Monoid algebra}
-Let $P$ be a Delzant polytope. Consider the cone \begin{align*}
-    \sigma_P = \{ (v,t) \in V \times \R \mid v \in tP, t \geq 0 \}
-\end{align*} The lattice points of this cone 
-form a semigroup $S_P$. Define the space \begin{align*}
-    X_2(P) = \Proj \C[S_P]
-\end{align*} 
-
-\begin{proposition}
-    The space $X_2(P)$ is a smooth projective toric variety.
-\end{proposition}
-This follows from general theory of projective toric varieties. We 
-refer the reader to chapter 2 of \cite{cls} for a detailed exposition.
-
 \subsection{Projective GIT}
 Let $P$ be a Delzant polytope. Complexifying (\ref{eq:ses1}), we get \begin{align*}
     1\to K_\C \to T_\C^N \to T_\C^n \to 1 
 \end{align*} Let $F_i$ denote the facets of $\Delta$ and for any $z = (z_1,\dots,z_N)\in\C^n$ let $F_z := \cap_{z_i = 0}F_i$.
 Consider the set \begin{align*}
     U = \{z\in\C^n: F_z \neq \emptyset\}
-\end{align*} Then the quotient $X_3(P) = U/K_\C$ is a manifold with an action of $T_\C^N/K_\C = T_\C^n$. It 
-is a smooth projective toric variety \red{because it is a projective GIT quotient}.
+\end{align*} Then the quotient $X_2(P) = U/K_\C$ is a manifold with an action of $T_\C^N/K_\C = T_\C^n$. It is a smooth projective toric variety because it is a projective GIT quotient, as we will explain with the following theorem of Kempf-Ness.
 
 \begin{remark}
-    There is a surjective map from $X^{ss}$ to $X//G$. Two points in $X^{ss}$ lie in the same fiber of this map if and only if the closures of their 
+    There is a surjective map from $X^{\text{ss}}$ to $X//G$. Two points in $X^{\text{ss}}$
+    lie in the same fiber of this map if and only if the closures of their 
     $G$-orbits intersect. In this case, the $K_\C$ orbits are closed. See \cite{proudfoot} for more details.
 \end{remark}
+\begin{proposition}
+    Let $M\subset \C\P^n$ be a smooth projective toric variety embedded by a line bundle.
+    Then $M$ is equivariantly symplectomorphic to a toric symplectic manifold.
+\end{proposition}
+\begin{proof}
+$\C\P^n$ carries a natural symplectic form $\omega$ 
+called the Fubini-Study form. Any smooth projective toric variety $M$ embedded
+in projective space carries a symplectic form $\omega$ induced by pulling 
+back the Fubini-Study form. Moreover, the action of $T$ on $M$
+ is Hamiltonian with respect to $\omega$.
+\end{proof}
+
+Conversely, given a toric symplectic manifold $(M,\omega)$, we can associate a 
+smooth projective toric variety to the moment polytope $\mu(M)$ which will be
+equivariantly symplectomorphic to $M$.
 \subsection{Kempf-Ness theorem}
-We want to compare the symplectic quotient to the projective GIT quotient.  First recall
-that if $K$ is a real compact group, then its complexification $G := K_\C$ is a 
+The Kempf-Ness theorem provides a connection between algebraic geometry and symplectic geometry. 
+Recall that if $K$ is a real compact group, then its complexification $G := K_\C$ is a 
 complex Lie group which contains $K$ and $\mf g = \mf k \oplus i\mf k$ is the complexification of $\mf k$. See \cite{hoskins} for more details about the following theorems.
 
 \begin{theorem}
     Complexification defines a bijection between the isomorphism
     classes of compact real Lie groups and complex reductive groups.
 \end{theorem}
-The following theorem of Kempf-Ness states a relationship between the symplectic quotient and the GIT quotient.
+The following theorem of Kempf-Ness establishes a relationship between the reduction of a Hamiltonian system by the real group $K$ and the corresponding projective GIT quotient by the complex group $G$.
 \begin{theorem}{\label{thm:kempf-ness}}
     [Kempf-Ness] 
     Let $G$ be a complex reductive group acting on a smooth complex projective variety 
@@ -260,7 +241,8 @@ The following theorem of Kempf-Ness states a relationship between the symplectic
 \end{theorem}
 
 \begin{remark}
-    \red{We should say more about this theorem}
+This theorem is fundamental in moduli problems, where spaces of equivalence classes of geometric objects (like vector bundles, sheaves, or varieties) can be constructed as quotients.
+It is widely used in understanding spaces like the moduli of vector bundles, the geometry of flag varieties, and moment polytope theory.
 \end{remark}
 
 \subsection{Fans and abstract toric varieties}
@@ -269,8 +251,7 @@ Let \( T \) be an \( n \)-dimensional torus with character group \( M \),
  and let \( N = \operatorname{Hom}_{\mathbb{Z}}(M, \mathbb{Z}) \) be
   the dual lattice, with pairing denoted \( \langle , \rangle \). Recall that Theorem \ref{thm:delzant} gives a correspondence between Delzant polytopes 
 and smooth projective toric varieties equipped with a very ample line bundle.
-Forgetting the embedding, we pass to the abstract toric variety, whose combinatorics 
-ends up being encoded in the data of a fan.
+Forgetting the embedding, we pass to the abstract toric variety, whose combinatorics is encoded in the data of a fan.
 
 \begin{definition}
     A \emph{fan} $\Sigma$ in a real vector space $N$ is a collection of cones
@@ -293,17 +274,11 @@ and it is a combinatorial object which encodes an equivariant atlas of charts fo
     A fan $\Sigma$ is \emph{projective} if there is a rational polytope $P$ such that $\Sigma$ is the normal fan of $P$.
 \end{definition}
 
-As the geometric language suggests, the toric variety $X(\Sigma)$ 
-corresponding to a fan $\Sigma$ is complete if and only if the fan is complete,
-and $X(\Sigma)$ is smooth if and only if the fan is nonsingular.
-
-See \cite{cls} for more details. 
-
-
+As the geometric language suggests, the toric variety $X(\Sigma)$ corresponding to a fan $\Sigma$ is complete if and only if the fan is complete, and $X(\Sigma)$ is smooth if and only if the fan is nonsingular. See \cite{cls} for more details. 
 
 \begin{example}
     Consider the unit right triangle with corresponding normal fan
-    \begin{center}
+    \begin{figure}[H]
         \begin{tikzpicture}[scale=0.5]
             \draw[step=1cm,gray,very thin] (-3,-3) grid (3,3);
             \filldraw[fill=gray!20, draw=black] (0,0) -- (2,0) -- (0,2) -- cycle;
@@ -323,7 +298,8 @@ See \cite{cls} for more details.
             % fill in the region from 5pi/4 to 3pi/2
             \filldraw[fill=blue!20, draw=black] (0,0) -- (-1,-1) -- (0,1) -- cycle;
         \end{tikzpicture}
-    \end{center} 
+        \caption{Polytope and normal fan for $\C\P^2$}
+    \end{figure}
     Note that the fan has three 2-dimensional cones which are filled in.
     These cones represent the three standard coordinate charts of $\P^2$ given by
     $x_i \neq 0$ for $i = 0,1,2$. The isosceles right triangle with
@@ -335,52 +311,23 @@ one can read further about them in \cite{cls}. The data of a fan,
 and in particular the primitive edge vectors (defined as the generators of the rays of the fan),
 will prove important in our discussion on equivariant cohomology.
 
-\subsection{Prequantization}
-Manifolds equipped with integral symplectic forms admit prequantization line bundles.
-In particular we have the following theorem. 
+\subsection{Cone-orbit correspondence}
+Let $T$ be an $n$-dimensional torus with character group $M$. Let $N = \Hom(M,\Z)$ be the
+dual lattice, their pairing is denoted by $\langle \cdot,\cdot\rangle$. Let $X = X(\Sigma)$ be a smooth complete toric variety, which are in bijection with complete nonsingular fans $\Sigma$ in $N_\R$.
 
-\begin{theorem}
-    Let $(M,\omega)$ be a symplectic manifold. Suppose that $[\omega]$ is integral. Then 
-    there exists a "prequantization" line bundle $\cL \to M$ with $c_1(\cL) = [\omega]$ and a Hermitian connection $\alpha$
-    whose corresponding curvature form is $\omega$. Moreover $\cL$ is unique up to isomorphism 
-    (but still requires a particular choice). 
-\end{theorem}
+For any convex cone $\sigma \subset N_\R$, the \emph{dual cone} in $M_\R$ is \begin{align*}
+	\sigma^\vee = \{u\in M_\R \mid \langle u,v\rangle \geq 0 \text{ for all } v\in \sigma\}.
+\end{align*} By intersecting with the lattice, we obtain a semigroup $\sigma^\vee \cap M$
+with corresponding semigroup algebra $\C[\sigma^\vee \cap M]$. The toric variety $X$
+is covered by $T$-invariant open affine sets \begin{align*}
+	U_\sigma = \Spec \C[\sigma^\vee \cap M]
+\end{align*} The affine charts corresponding to the top-dimensional cones of $\Sigma$
+are enough to cover $X$, and the intersection of cones corresponds to the intersection of
+affine charts.
 
-\begin{remark}
-    \red{I don't quite understand the so-what of this theorem. What comes after "prequantization"?}
-\end{remark}
-
-\begin{proposition}
-    The line bundle $\cL = U \times_{K_C} \C$ where $K_\C$ acts on $\C$ with 
-    weight $\nu = L(-\lambda)$ is a prequantization line bundle for $M = U/K_\C$. Note that $\nu \in k^*$ is the 
-    dual Lie algebra of $K_\C$.
-\end{proposition}
-\begin{proof}
-    See \cite{hamilton}.
-\end{proof}
-Symplectic reduction realizes a Kahler form on the reduced space, in particular
-$M$ and $\cL$ actually carry complex structures. The following theorem is about the space of
-holomorphic sections of $\cL$.
-\begin{theorem}
-    With the setup above, we have \begin{align*}
-        \dim H^0(M,\cL) = \#(\text{integer points in } P)
-    \end{align*}
-\end{theorem}
-
-\begin{proof}
-    A holomorphic section of $\cL$ over $M$ corresponds to a $K_\C$-equivariant holomorphic function $f:U\to \C$. 
-    Such $f$ extends to all of $\C^N$ because of Hartog's theorem (A holomorphic function on $\C^N$ for $N>1$ canont have 
-    an isolated singularity and therefore cannot have a singularity on a submanifold of codimension $\geq 2$).
-
-    Write such a function as its Taylor series so that \begin{align*}
-        f = \sum_{\alpha\in\N^n} c_\alpha z^\alpha
-    \end{align*} Consider the equivariance one term at a time. 
-    Thinking about the monomial $f(z) = z^I$ we 
-    see that \begin{align*}
-        f(k\cdot z) &= f(i(k)\cdot z) = (i(k)\cdot z)^I = i(k)^Iz^I = k^{i^*(I)}z^I \\
-        k\cdot f(z) &= k^{\nu}z^I
-    \end{align*} and therefore a basis for the space of equivariant functions $f:U\to \C$ 
-    is given by the monomials corresponding to lattice points in $P$.
-\end{proof}
+Each cone $\tau$ of the fan also defines a torus-invariant subvariety $V(\tau)$ of $X$ of codimension $\dim \tau$.
+On open affines, the subvariety looks like \begin{align*}
+	V(\tau) \cap U_\sigma = \Spec \C[\tau^{\perp} \cap \sigma^\vee \cap M] \hookrightarrow \Spec \C[\sigma^\vee \cap M]
+\end{align*} and so elements of the dual lattice $N$ can be thought of as rational functions on $X$.
 
 
